05-INGRESS/05-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: v1.k8s02.local 
    http:
      paths:
      - backend:
          serviceName: hello-v1-svc
          servicePort: 80
  - host: v2.k8s02.local
    http:
      paths:
      - backend:
          serviceName: hello-v2-svc
          servicePort: 80
